src/bootstrap/test/v0_5/rejects/13_orphan_reject/other.zg
pub spec S {
    fn ping() -> int
}
